# Instruction-Generator

./: .env.example  .gitignore  README.md  README.txt  docker-compose.yml  pyproject.toml  과제명세서.md
data/: README.md  project_subject.txt
docs/: architecture.md  current_state_snapshot_2026-03-18.md  deployment_runtime_bundle.md  documentation_map.md  llm_prompts.md  local_week1_baseline_progress.md  roadmap_after_baseline_2026-03-17.md  subject.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: router.tsx
frontend/src/components/feedback/: AsyncState.tsx
frontend/src/components/quiz/: QuestionProgress.tsx  QuizQuestionCard.tsx
frontend/src/components/report/: ProfileDistributionPanel.tsx  QuestionReviewPanel.tsx  ReportMetricCards.tsx  TopicCoveragePanel.tsx
frontend/src/components/weekly/: ConceptMapPanel.tsx  LearnerMemoCard.tsx  ReviewPointsPanel.tsx  TopicAxisMap.tsx  WeekActionRail.tsx  WeekSelector.tsx  (+2 more)
frontend/src/hooks/: useWeeklyConceptMap.ts  useWeeklyReportResponse.ts
frontend/src/pages/: HomeRedirectPage.tsx  NotFoundPage.tsx  WeekHubPage.tsx  WeekQuizPage.tsx  WeekReportPage.tsx  WeekRouteLayout.tsx
frontend/src/providers/: weekly-workspace.tsx
frontend/src/types/: api.ts
scripts/: _bootstrap.py  build_index.sh  build_weekly_for_week.py  check_runtime_data_bundle.py  generate_artifacts.sh  prepare_corpus.sh  rebuild_corpus_full.py  rebuild_corpus_until_done.sh  run_api.sh  run_ui.sh  start_postgres.sh  sync_weekly_read_model.py  wait_for_db.py
src/: utils.py
src/preprocess/: preprocess.py
src/rag/: generate_quiz.py
src/stt_quiz_service/: __init__.py  config.py  orchestrator.py  prompts.py  schemas.py  streamlit_app.py
src/stt_quiz_service/agents/: base.py  mock_backend.py  pydantic_ai_backend.py  weekly_backend.py
src/stt_quiz_service/api/: app.py
src/stt_quiz_service/services/: embeddings.py  ingestion.py  preprocess.py  quiz_profiles.py  retrieval.py  stt_preprocessor.py  topic_extraction.py  weekly_baseline_sync.py  weekly_learner_memo.py  weekly_quiz_langchain.py  weekly_quiz_submission.py
src/stt_quiz_service/storage/: db.py  models.py  repository.py
tests/: conftest.py  test_api.py  test_embeddings.py  test_ingestion.py  test_pipeline_skip.py  test_pydantic_ai_backend.py  test_quiz_profiles.py  test_retrieval.py  test_stt_preprocessor.py  test_weekly_pipeline.py
utils/: .env.sample  config.yaml
(+3 files in other folders)
