[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-quiz-service"
version = "0.1.0"
description = "STT-based quiz and study guide generation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.1",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.1.1",
  "sqlalchemy>=2.0.48",
  "psycopg[binary]>=3.3.3",
  "pgvector>=0.4.2",
  "openai>=1.109.1",
  "pydantic>=2.12.5",
  "pydantic-ai>=1.67.0",
  "tiktoken>=0.11.0",
  "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "httpx>=0.28.1",
]
generation = [
  "keybert==0.9.0",
  "langchain==1.2.12",
  "langchain-core==1.2.19",
  "langchain-google-genai==4.2.1",
  "langchain-openai==1.1.11",
  "langchain-postgres==0.0.17",
  "langchain-text-splitters==1.1.1",
  "langsmith==0.7.18",
  "scikit-learn>=1.7.2",
  "sentence-transformers==5.3.0",
  "transformers==5.3.0",
  "yake==0.7.3",
]
ui = [
  "requests==2.32.5",
  "streamlit==1.55.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
